[fix]scrollbar  appearing on viewport heigth

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -43,6 +43,10 @@ a:active {
 }
 
 //body html
+body,html {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: $font-family;
   background-color: $bg-default;
